add props section

--- a/src/stories/button.stories.mdx
+++ b/src/stories/button.stories.mdx
@@ -9,6 +9,15 @@ export const Template = args => <Button {...args} />
 
 Buttons are interactive elements designed to grab a users attention.  They are often used as a call to action (CTA) we want our users to take.  For example, navigating to another page, or completing a process like submitting a form.
 
+## Props
+
+- `skin: String`
+    - Default to `primary`
+    - Options: 
+        - `primary` (default)
+        - `secondary`
+        - `danger`
+
 ## Primary Button
 
 A primary button is the main CTA and is recommended to be used sparingly within a page.  In a perfect world only a single primary button would be shown in a section; this helps the users better understand the action they should take.
