--- a/src/stories/profile-list.stories.mdx
+++ b/src/stories/profile-list.stories.mdx
@@ -14,14 +14,18 @@ export const Template = args => <List {...args} />
 # List and ListItem components
 ## specific to profile
 
-The goal is to have a list and li item component, this component is a bit opinionated specifically for a user’s profile. The list li's are built to have 2 columns the first for the icon and the second for the text.
+List and ListItem component the goal is to have specific icons for the type and a text description next to this, for example a user's email would be the type and would display an envelope icon next to joeblow@yahoo.com. This component is opinionated specifically for a user’s profile. Additional icons might be planned.
+
 ## Props
+```javascript
+<List items={Array}>
+    children //see children example
+</List>
+```
 
-This takes the prop items: as Object or children
-
-
-- `items: Object`
-```json
+#### props as array
+```javascript
+const items =
  [
     {
         "type": "email",
@@ -53,17 +57,21 @@ This takes the prop items: as Object or children
     }
 ]
 ```  
+Children as Prop Example:
+``` jsx
+        <List.Item type="DesiredIconType" value="SomeTextValue"/>
+```
 
 
 ## List 
 
 <Canvas>
     
-    <Story name="Props as Object">   
-        <h2> List props passed as an object is the expected scenerio for this. </h2>
-        <p> the items prop is of type object and first gets passed to the profile.js which formats data for list it will wind in the above code example</p>
+    <Story name="Props as an Array">   
+        <h2>Props passed as an Array.</h2>
+        <p> Props as array is the expected scenerio for this component. This data gets formated from the api to profile.js which formats the data for the list component. It will wind in the array format as the above code example.</p>
         <div style={{width: "368px"}}>
-        <Card title="Props as object" onEdit={() => console.log("Edit is Clicked!")}>
+        <Card title="Props as Array">
             <List items={items}/>
         </Card>
         </div>
@@ -75,10 +83,10 @@ This takes the prop items: as Object or children
 <Canvas>
     
     <Story name="Props as children">  
-        <h2> List props passed as an object is the expected scenerio for this. </h2>
-        <p> the items prop is of type object and first gets passed to the profile.js which formats data for list</p>
+        <h2> Props as children</h2>
+        <p> Its also possiable to get the desired icons using this formatting for the Children elements. See 'show code' lower right. :) </p>
         <div style={{width: "368px"}}>
-        <Card title="Props as children" onEdit={() => console.log("Edit is Clicked!")} >
+        <Card title="Props as children">
             <List >
                         <List.Item type="email" value="boValue@9k9.com"/>
                         <List.Item type="spokenLanguages" value="EN,JP"/>
