--- a/src/stories/mentor-card.stories.mdx
+++ b/src/stories/mentor-card.stories.mdx
@@ -2,7 +2,7 @@ import Card from '../components/Card/Card';
 import {UserProvider} from '../context/userContext/UserContext'
 import { Meta, Story, Canvas, ArgsTable } from '@storybook/addon-docs/blocks';
 
-<Meta title="Cards" component={Card} argTypes={{ onClick: { action: 'clicked' } }}/>
+<Meta title="Mentor Card" component={Card} argTypes={{ onClick: { action: 'clicked' } }}/>
 
 export const Template = args => <Card {...args} />
 
