--- a/src/stories/textarea.stories.mdx
+++ b/src/stories/textarea.stories.mdx
@@ -11,7 +11,11 @@ import { Meta, Story, Canvas, ArgsTable } from '@storybook/addon-docs/blocks';
 
 export const Template = args => <Textarea {...args} />
 
-# Input
+# Textarea
+
+The `Textarea` component is a styled component that wraps the primitive html element `textarea`.  All props are
+forwarded to the underlying `textarea` element. To render a `Textarea` with a label you need to use a `FormField` 
+component.
 
 <Canvas>
   <Story name="Default">
@@ -23,6 +27,9 @@ export const Template = args => <Textarea {...args} />
 
 ## With Help Message
 
+The `Textarea` component can be shown with an optional help message to the right of its label by passing along a 
+`helpText` prop to the `FormField` component.
+
 <Canvas>
   <Story name="With Help Message">
     <FormField label="Why do you want to be a mentor?" helpText="max 255">
@@ -32,6 +39,9 @@ export const Template = args => <Textarea {...args} />
 </Canvas>
 
 ## Without Label
+
+The `Textarea` component can be shown without a label by omitting the `label` prop on the `FormField` component
+that wraps it. It's important to still use a `FormField` even when you don't want the label to show.
 
 <Canvas>
   <Story name="Without Label">
