Remove unused ArgsTable import

--- a/src/stories/mentor-card.stories.mdx
+++ b/src/stories/mentor-card.stories.mdx
@@ -1,6 +1,6 @@
 import Card from '../components/Card/Card';
 import {UserProvider} from '../context/userContext/UserContext'
-import { Meta, Story, Canvas, ArgsTable } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
 <Meta title="Mentor Card" component={Card} argTypes={{ onClick: { action: 'clicked' } }}/>
 
