--- a/src/stories/button.stories.mdx
+++ b/src/stories/button.stories.mdx
@@ -1,5 +1,5 @@
 import Button from '../Me/components/Button';
-import { Meta, Story, Canvas, ArgsTable } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
 <Meta title="Button" component={Button} argTypes={{ onClick: { action: 'clicked' } }}/>
 
