--- a/src/stories/input.stories.mdx
+++ b/src/stories/input.stories.mdx
@@ -1,6 +1,6 @@
 import Input from '../Me/components/Input';
 import FormField from '../Me/components/FormField';
-import { Meta, Story, Canvas, ArgsTable } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
 <Meta
   title="Input"
