--- a/src/stories/textarea.stories.mdx
+++ b/src/stories/textarea.stories.mdx
@@ -1,6 +1,6 @@
 import Textarea from '../Me/components/Textarea';
 import FormField from '../Me/components/FormField';
-import { Meta, Story, Canvas, ArgsTable } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
 <Meta
   title="Textarea"
