Features/mentorship req modal (#769)
* Feature/mentorship request (#747)

* initial push for new feature mentorship request

* add confirmation page before closing modal

* one component and use current localstorage values

* fixed issue with passing mentor object

* added validate per required input added background and expectations text areas back in and putt styling for button bar back

* use css variables

* update test suit to use css variables added

Co-authored-by: Chase Hochstrasser <chochstrasser@sofi.org>

* Convert Header to Styled Component Styling - run Lint (#759)

* smoke test for nav bar, rename toggle to match use, update deps arrays, import 3rd party deps first (#760)

* Refactor/me (#754)

* refactor: add basic button props

* refactor: modal to use Button

* fix: input's autocomplete obscure the dropdown list

* refactor: change '/me/home/' to '/me'

* refactor: redirect to '/me' instead of '/me/home'

* update Button test

* merge master

* update Button and Select snap

* fix: rm duplicate import of ga.report

* fix: remove duplicate getAvatarUrl import

* fix: add mandatory 'to'  prop to Logout

* fix: provide default value to fromMtoVM > title

* fix: add isMentor chack

* update snapshots

* add Button OnClick test

* travis CI failed previous commit. attempting to update snap yet again

Co-authored-by: Mosh Feu <moshfeu@gmail.com>
Co-authored-by: Mooli Morano <mooli.morano@peluk.org>

* Storyflow (#761)

* button stories

* storyflow final

* put the profile card back

* prettier

* Convert checkbox story to mdx (#765)

* story: Profile List story | #746 in progress | (#757)

* Convert input stories to mdx (#764)

* Convert input stories to mdx

Separate textarea storiy from input stories and add a few more to be helpful.

* better stories

* Remove unused ArgsTable import

* Delete button snapshot tests (#763)

* start implement approved modal

* add Dec

--- a/src/stories/button.stories.mdx
+++ b/src/stories/button.stories.mdx
@@ -1,5 +1,5 @@
 import Button from '../Me/components/Button';
-import { Meta, Story, Canvas, ArgsTable } from '@storybook/addon-docs/blocks';
+import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
 <Meta title="Button" component={Button} argTypes={{ onClick: { action: 'clicked' } }}/>
 
@@ -23,9 +23,7 @@ Buttons are interactive elements designed to grab a users attention.  They are o
 A primary button is the main CTA and is recommended to be used sparingly within a page.  In a perfect world only a single primary button would be shown in a section; this helps the users better understand the action they should take.
 
 <Canvas>
-    <Story
-        name="Primary"
-    >
+    <Story name="Primary">
         <Button>Primary</Button>
     </Story>
 </Canvas>
